修改错别字

--- a/Server/服务器端简要介绍.md
+++ b/Server/服务器端简要介绍.md
@@ -299,5 +299,5 @@ $ nohup ./Server &
 
 ## 心得与展望
 
-服务端程序的编写涉及到了很多Linux操作系统以及计算机网络的的内容，涉及范围较广，对于个人能力提生较大。后期考虑添加账户系统，以及排名系统，使之作为联网游戏更加完整。
+服务端程序的编写涉及到了很多Linux操作系统以及计算机网络的的内容，涉及范围较广，对于个人能力提升较大。后期考虑添加账户系统，以及排名系统，使之作为联网游戏更加完整。
 
